# voynich-toolkit

./: .gitignore  EPILECTRIK_NOTES.md  LICENSE  PAPER.md  README.md  STATUS.md  analysis_f_lamed.py  analysis_full_19char.py  analysis_i_composite.py  pyproject.toml
archive/: PUBBLICAZIONI.md  STATUS.md  TRANSLATION_AUDIT_EN.md  evidence_report.tex
output/: readings_merged.md
output/eva/: comparison_report.csv  eva_report.json
output/readings/: f100r.txt  f100v.txt  f101r.txt  f101v.txt  f102r1.txt  f102r2.txt  f102v1.txt  f102v2.txt  f103r.txt  f103v.txt  f104r.txt  f104v.txt  f105r.txt  f105v.txt  f106r.txt  f106v.txt  f107r.txt  f107v.txt  f108r.txt  f108v.txt  f10r.txt  f10v.txt  f111r.txt  f111v.txt  f112r.txt  f112v.txt  f113r.txt  f113v.txt  f114r.txt  f114v.txt  f115r.txt  f115v.txt  f116r.txt  f116v.txt  f11r.txt  f11v.txt  f13r.txt  f13v.txt  f14r.txt  f14v.txt  (+187 more)
output/stats/: 2gram_top30.csv  3gram_top30.csv  4gram_top30.csv  analysis_f_lamed_sample.txt  analysis_report.json  anchor_words_report.json  champollion_matches.txt  champollion_report.json  char_embeddings.json  cipher_hypothesis.json  copyist_analysis.json  crib_wordlevel_f100r.json  crib_wordlevel_f100v.json  crib_wordlevel_f101r.json  crib_wordlevel_f101v.json  crib_wordlevel_f102r1.json  crib_wordlevel_f102r2.json  crib_wordlevel_f102v1.json  crib_wordlevel_f102v2.json  crib_wordlevel_f103r.json  (+239 more)
paper/: paper.tex
scripts/: build_sqlite_db.py  decode_all_pages.py  download_veneto_lexicons.py  honesty_tests.py  interpret_batch.py  interpret_f27r.py  interpret_f75r.py
(+98 files in other folders)
